style.css
/* ... */
@media only screen and (max-width: 1400px) {
  .home h1{
    position: relative;
    top: -3rem;
    font-size: 3rem;
    line-height: 130%;
  }
  .spark-navbar .spark-nav-links {
    gap: 24px;
  }
}

@media only screen and (max-width: 1250px) {

  .spark-navbar {
    width: 90vw;
  }
}

@media only screen and (max-width: 1100px) {
.home h1{
  position: relative;
  top: -5rem;
  font-size: 3rem;
  line-height: 130%;
}
  /* .spark-navbar .spark-nav-links a{
    display: none;
  } */

  /* .spark-navbar .notes-button a{
    display:none;
  } */
  /* .top-nav{
    display: none;
  } */
}

@media only screen and (max-width: 992px) {
  /* .spark-navbar .spark-nav-links {
    display:none;
  } */


  .home h1{
    position: relative;
    top: -8rem;
    font-size: 2.5rem;
    line-height: 130%;
  }
  /* .home{
    top:-500px;
  } */
}

@media only screen and (max-width: 768px) {
  .home>h1 {
    font-size: 40px;
  }

  .spark-navbar .spark-nav-links a:nth-of-type(1) {
    display: none;
  }
}

@media only screen and (max-width: 700px) {

  .spark-navbar {
    display: none !important;
  }

  .home>h1 {
    font-size: 40px;
  }

  .spark-navbar .spark-nav-links a {
    display: none;
  }
  .home img{
    position: relative;
    top:-10%;
    scale:1.05;
    /* padding: 0 2px 0 2px; */
  }
  .top-nav {
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
    /* border-radius: 20px; */
    /* padding: 8px; */
    background: rgba(46, 46, 46, 0.7);
    box-shadow: 0px 2px 5px 0px rgba(78, 78, 78, 0.12);
    backdrop-filter: blur(7px);
    z-index: 1001;
    transition: smooth 1s ease-in-out !important;
    position: fixed !important;
    top: 0;
  }

  .top-nav .logo {
    display: flex;
    height: 36px;
    gap: 24px;
    cursor: pointer;
    /* padding-left:0px; */
  }

  .top-nav .spark-logo-text {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.75rem;
    font-weight: 600;
    color: #d9d9d9;
    text-decoration: none;
    /* margin-right: 20px; */
  }

  .top-nav .menu li {
    background: rgba(46, 46, 46, 0.9);
    /* box-shadow: 0px 2px 5px 0px rgba(78, 78, 78, 0.12); */
    backdrop-filter: blur(100px);
  }

  .top-nav a {
    text-decoration: none;
    color: #d9d9d9;
  }

}

@media only screen and (max-width: 600px) {
  .home h1{
    position: relative;
    top: -10rem;
    font-size: 2rem;
    line-height: 130%;
  }

  /* .top-nav{
    display: none;
  } */

}

@media only screen and (max-width: 400px) {


  .hero .lower-icons {
    top: 50%;
  }

  .hero .upper-icons {
    top: 20%;
  }

  .icons-small {
    height: 40px !important;
  }

  .bg {
    top: 14rem;
  }

  .home>h1,
  .home>img {
    position: relative;
    top: -7.5rem;
    font-size: 1.25rem;
    font-weight: 500;
    line-height: 130%;
  }

  .home>img {
    transform: scale(1.4) translateY(70px);
  }

  .upper-icons {
    width: 70vw !important;
  }

  .lower-icons {
    width: 55vw !important;
  }
  .hero .lower-icons img{
    scale:0.9;
  }



}

@media only screen and (max-width: 320px) {}

.group:hover .bg-pink-600 {
  background-color: #0c62e4;
  animation-duration: 500ms;
}

.group:hover .text-white {
  color: black;
  z-index: 1;
}

#schedules {
  font-family: 'Manrope', sans-serif;
  color: white;
}

.schedule {
  display: flex;
}

.left-schedule {
  width: 30vw;
  /* display: flex;
  align-items: center; */
}

.left-schedule-content{
  width: 100%;
  overflow: hidden;
}

.left-schedule h2 {
  font-size: 4vw;
}

.schedule-para {
  font-size: 1.5vw;
}

.left-schedule-container {
  margin-left: 5vw;
  margin-top: 1vw;
}

.schedule-progress-bar {
  display: flex;
  margin-top: 1vw;
}

.paralleogram {
  margin-right: 3px;
  background-color: white;
  height: 25px;
  width: 20px;
  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
}

.left-schedule p {
  margin-top: 1vw;
}

.box {
  display: inline-block;
  background-color: #060606;
  /* background-color: white; */
  width: 22vw;
  height: 24vw;
  margin: 30px 10px auto 10px;
  border-radius: 0.7vw;
  transition: 0.2s;
}

.box:hover {
  box-shadow: -4px 4px 4px #0c62e4;
}

.sticky-element {
  position: sticky;
  top: 35%;
}

.right-schedule {
  width: 60%;
}

.right-schedule-container {
  width: 69%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  margin-bottom: 5%;
  margin: auto auto auto 10%;

}

.down {
  transform:translateX(100%);
}

/* .container-of-one{
  transform: translateY(calc(12vw));
} */
.container-of-two {
  width: 100%;
}

.schedule-image img {
  width: 20%;
  margin: auto 5%;
}

.schedule-image {

  width: 100%;
  height: 25%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.img-btn img{
  cursor: pointer;
  width: 16.5%;
  margin: auto 1.8%;
}

.box h5 {
  margin: 2% auto;
  width: 90%;
  text-align: center;
  font-size: 1.7vw;
}

.box p {
  margin: 4% auto;
  width: 80%;
  text-align: center;
  font-size: 1vw;
}

.card-number {
  font-size: 1.2vw;
  position: relative;
  float: right;
  margin: 3% 3%;
  margin-right: 4%;

}
/* ... */

